force-app/main/default/objects/Child__c/Child__c.object-meta.xml
<CustomObject>
    <description>Used to hold the information related to the children associated with the accounts.</description>
    <label>Child</label>
    <nameField>
        <displayFormat>Child-{000000}</displayFormat>
        <label>Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>