force-app/main/default/objects/Child__c/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <label>Allergies</label>
    <type>TextArea</type>
</CustomField>