force-app/main/default/objects/Child__c/fields/Authorized_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Pickup__c</fullName>
    <inlineHelpText>I give permission for my child (aged 12 and over) to leave CircEsteem at the end of programming by themselves.</inlineHelpText>
    <label>Authorized Pickup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>