force-app/main/default/objects/Child__c/fields/CircEsteem_Program__c.field-meta.xml
<CustomField>
    <fullName>CircEsteem_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CircEsteem Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Children (CircEsteem Program)</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>