force-app/main/default/objects/Child__c/fields/General_Release_Form__c.field-meta.xml
<CustomField>
    <fullName>General_Release_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Release Form</label>
    <referenceTo>Forms__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>