force-app/main/default/objects/Child__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>