force-app/main/default/objects/Child__c/fields/Parent_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_s_Email__c</fullName>
    <label>Parent&apos;s Email</label>
    <type>Email</type>
</CustomField>