force-app/main/default/objects/Child__c/fields/Photography_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Photography_Permitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photography Permitted?</label>
    <type>Checkbox</type>
</CustomField>