force-app/main/default/objects/Child__c/fields/Related_Program__c.field-meta.xml
<CustomField>
    <fullName>Related_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>Enrolled_Children</relationshipName>
    <type>Lookup</type>
</CustomField>