force-app/main/default/objects/Child__c/fields/Things_We_Should_Know__c.field-meta.xml
<CustomField>
    <fullName>Things_We_Should_Know__c</fullName>
    <label>Things We Should Know</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>