force-app/main/default/objects/Child__c/fields/Which_Pronouns_Does_Your_Child_Prefer__c.field-meta.xml
<CustomField>
    <fullName>Which_Pronouns_Does_Your_Child_Prefer__c</fullName>
    <label>Which Pronouns Does Your Child Prefer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>She/ her</fullName>
            </value>
            <value>
                <fullName>He/ him</fullName>
            </value>
            <value>
                <fullName>They/ them</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>